<resources>

    <!-- Splash Activity -->
    <string name="app_name">QR Code - Reader and Generator</string>
    <string name="logo_accessibility">Logo written QR Code reader and generator</string>
    <string name="developed_by">Developed by Emanuel Galvão</string>

    <!-- Main Activity -->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="read">READ</string>
    <string name="generate">GENERATE</string>
    <string name="nav_read">QR Codes Read</string>
    <string name="nav_generate">QR Codes Generated</string>
    <string name="nav_configuration">Configuration</string>

    <!-- Read Activity -->
    <string name="read_qr_code">READ QR CODE</string>
    <string name="example">Example</string>
    <string name="qr_code_content">QR Code Content:</string>
    <string name="share">Share</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="click_to_read">Click on the button to read!</string>
    <string name="configuration">Configuration</string>
    <string name="scan_qr_code">Scan the QR Code!</string>

    <!-- Generate Activity -->
    <string name="generate_qr_code">GENERATE QR CODE</string>
    <string name="type_the_content">Type the content that you want to appear on QR Code…</string>

    <!-- Read and Generated Activity -->
    <string name="qr_codes_read">QR Codes Read</string>
    <string name="qr_codes_generated">QR Codes Generated</string>

    <!-- Dialog Details -->
    <string name="qr_code_details">QR Code Details</string>
    <string name="share_text">Share Text</string>
    <string name="share_image">Share Image</string>
    <string name="delete">Delete</string>
    <string name="share_qr_code_image">Share QR Code Image</string>
    <string name="copied_text">Copied Text!</string>
    <string name="share_qr_code_content">Share QR Code content</string>

    <!-- Configuration Activity -->
    <string name="play_beap">Play beap when reading QR Code</string>

</resources>