<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_read"
            android:title="@string/nav_read" />
        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/ic_generated"
            android:title="@string/nav_generate" />

    </group>

    <group
        android:id="@+id/group_configuration"
        android:checkableBehavior="single"
        android:visible="false" >
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_configuration"
            android:title="@string/nav_configuration" />
    </group>
</menu>